fix: alignment issues

--- a/src/components/card/card.css
+++ b/src/components/card/card.css
@@ -1,4 +1,6 @@
 .card-css {
+    width: 100%;
+    padding: 0 120px;
 
     .card {
         /* width: calc(33.33% - 20px); */
@@ -28,8 +30,8 @@
     }
 
     .card-section {
-        padding-left: 50px;
-        padding-right: 50px;
+        /* padding-left: 50px;
+        padding-right: 50px; */
         padding-top: 100px;
         /* padding-bottom: 100px; */
 
